{
    "name": "InputActions",
    "maps": [
        {
            "name": "CarControl",
            "id": "b35aeec6-5248-475c-8473-3789a79c6352",
            "actions": [
                {
                    "name": "ForwardOrReverse",
                    "type": "Value",
                    "id": "9e1d35cb-9478-4c04-930c-1cb8785dd64e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TurningWheel",
                    "type": "Button",
                    "id": "0d2ee3ca-c066-4c3a-bc2e-0687c9f4112a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "4cc443cb-a4ab-4af6-b70d-60b5bd2af3c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WS",
                    "id": "e4986152-65e4-490d-89b3-a8a415b23d6c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardOrReverse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0bef83d7-984d-4cb4-a0e8-256fd0dedf7b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardOrReverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "803bf195-8276-4dda-8a60-dc2d3ff03076",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardOrReverse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "a123c33d-5a7a-4f75-a1eb-13e4f3f32cd0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningWheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "d5ba0664-112b-4b07-bd37-b5f5ba5b29ff",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "6bee49e5-d862-4461-ab9d-66d897a48498",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurningWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "72fa5197-6475-463b-935e-fc27310c7a8c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}